--- a/src/scss/frontend/components/classes/_layout.scss
+++ b/src/scss/frontend/components/classes/_layout.scss
@@ -48,17 +48,17 @@
 }
 
 .no-margin {
-  margin-top: 0 !important;
-  margin-right: 0 !important;
-  margin-bottom: 0 !important;
-  margin-left: 0 !important;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
 }
 
 .no-padding {
-  padding-top: 0 !important;
-  padding-right: 0 !important;
-  padding-bottom: 0 !important;
-  padding-left: 0 !important;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
 }
 
 .round {
