--- a/src/scss/frontend/components/classes/_typography.scss
+++ b/src/scss/frontend/components/classes/_typography.scss
@@ -4,7 +4,7 @@
 // DO NOT EDIT! Contains all of Frontend's pre-packaged typography class styles.
 ////////////////////////////////////////////////////////////////////////////////
 
-/* Text Decorations */
+// Text decorations
 
 .strikethrough {
   text-decoration: line-through;
@@ -15,7 +15,7 @@
 }
 
 
-/* Font Weights */
+// Font weights
 
 .font-weight-normal {
   font-weight: $global-weight-normal;
@@ -34,7 +34,7 @@
 }
 
 
-/* Font Sizes */
+// Font sizes
 
 .font-size-xxxlarge {
   font-size: $xxxlarge-font-size;
