--- a/src/scss/frontend/global/_variables.scss
+++ b/src/scss/frontend/global/_variables.scss
@@ -1,5 +1,5 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Framework Variables (v3.2.0)
+// Framework Variables
 //
 // All framework pre-packaged variables.
 //
