--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Global Styles File (style.css, v3.0.0)
+// Global Styles File (style.css)
 //
 // Add all global style imports here. This file should only contain imports and
 // no individual style definitions.
